@startuml
skinparam style strictuml
skinparam classAttributeIconSize 0

skinparam DefaultFontName "Helvetica"
skinparam DefaultFontSize 12
skinparam class {
    BackgroundColor White
    BorderColor #333333
    ArrowColor #555555
}
skinparam nodesep 100
skinparam ranksep 100

skinparam ArrowThickness 1.2
skinparam ArrowFontStyle bold
skinparam ArrowFontSize 11
skinparam ArrowColor #444444

package "domain.model.user" {
    class User <<Entity - Immutable>> {
        - id: Long
        - username: String
        - firstName: String
        - lastName: String
        - email: String
        - birthday: LocalDate
        - phone: String
        - isAdmin: boolean
        - status: AccountStatus
        --
        + withAccountStatus(status: AccountStatus): User
    }

    enum AccountStatus {
        ACTIVE
        BANNED
    }
}

package "domain.model.feedback" {
    class Report <<Entity - Immutable>> {
        - id: Long
        - userId: Long
        - adminId: Long
        - eventId: Long [0..1]
        - severity: ReportSeverity
        - comment: String
        - createdAt: LocalDateTime
    }

    enum ReportSeverity {
        LOW
        MIDDLE
        HIGH
    }
}

User "1 " --> "1 " AccountStatus : " l'account è"
class Event <<Entity reference>>
Report "0..*" --> "0..1" Event : "riguarda eventualmente"
Report "1 " --> "1 " ReportSeverity : " classificato con"
Report "0..*" -right-> "1" User : "riguarda"
Report "0..*" -left-> "1" User : "creato da Administrator"
@endum
